# Playadate_C_Development

./: .gitignore
C_Template/: CMakeLists.txt  buildDev_Release.bat  buildSim.bat
Examples/Hello_World/: buildDev.bat
Examples/Hello_World - CPP/: CMakeLists.txt  buildSim.bat
Examples/Hello_World - CPP/Source/: pdex.elf
Examples/Hello_World - CPP/src/: main.cpp  main.h
